<?xml version="1.0"?>
<package>
  <name>agent_msgs</name>
  <version>0.0.0</version>
  <description>The agent_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jenjen.chung@oregonstate.edu">Jen Jen Chung</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
